--- a/mod-06/movies-app/src/app/app.component.html
+++ b/mod-06/movies-app/src/app/app.component.html
@@ -1,3 +1,14 @@
 <h1>
   {{title}}
 </h1>
+
+
+<app-movies>
+</app-movies>
+
+<app-movies>
+</app-movies>
+
+
+<app-async-movies>
+</app-async-movies>
